fixed config bug

--- a/ihris-backend/config/baseConfig.json.example
+++ b/ihris-backend/config/baseConfig.json.example
@@ -41,7 +41,7 @@
     },
     {
       "name": "elasticsearch:max_scroll_context",
-      "valueString": "100000/1m"
+      "valueString": "100000"
     },
     {
       "name": "kibana:base",
