--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -16,10 +16,11 @@
     "dompurify": "^2.1.1",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
-    "fhir2es": ">1.3.0",
+    "fhir2es": "^2.1.1",
     "fhirpath": "^2.6.1",
     "http-proxy-middleware": "^1.0.5",
     "is-empty": "^1.2.0",
+    "jest-cucumber": "^3.0.0",
     "lodash": "^4.17.20",
     "marked": "^1.2.0",
     "morgan": "~1.9.1",
