remove latest from hapi docker

--- a/docker-compose.hapi.yml
+++ b/docker-compose.hapi.yml
@@ -4,7 +4,7 @@ services:
 
   fhir:
     container_name: fhir
-    image: hapiproject/hapi:latest
+    image: hapiproject/hapi:v5.2.1
     ports:
       - "8080:8080"
     environment:
