--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -16,7 +16,7 @@
     "dompurify": "^2.1.1",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
-    "fhir2es": ">3.0.0",
+    "fhir2es": "^3.0.5",
     "fhirpath": "^2.6.1",
     "http-proxy-middleware": "^1.0.5",
     "is-empty": "^1.2.0",
@@ -33,7 +33,7 @@
     "redis": "^3.0.2",
     "require-from-string": "^2.0.2",
     "supertest": "^4.0.2",
-    "urijs": "^1.19.5",
+    "urijs": "^1.19.6",
     "url": "^0.11.0",
     "uuid": "^8.3.0",
     "webidl-conversions": "^6.1.0",
