--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -16,13 +16,14 @@
     "dompurify": "^2.1.1",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
-    "fhir2es": ">3.0.0",
+    "fhir2es": "^3.0.7",
     "fhirpath": "^2.6.1",
     "http-proxy-middleware": "^1.0.5",
     "is-empty": "^1.2.0",
     "jest-cucumber": "^3.0.0",
     "lodash": "^4.17.20",
     "marked": "^2.0.0",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "nconf": "^0.10.0",
     "object-hash": "^2.0.3",
