--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -21,7 +21,7 @@
     "http-proxy-middleware": "^1.0.5",
     "is-empty": "^1.2.0",
     "jest-cucumber": "^3.0.0",
-    "lodash": "^4.17.20",
+    "lodash": ">=4.17.21",
     "marked": "^2.0.0",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
@@ -32,7 +32,7 @@
     "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "redis": "^3.0.2",
+    "redis": ">=3.1.1",
     "require-from-string": "^2.0.2",
     "supertest": "^4.0.2",
     "urijs": "^1.19.6",
