adding a workflow to check if practitioner exists by using phone number

--- a/ihris-backend/config/baseConfig.json.example
+++ b/ihris-backend/config/baseConfig.json.example
@@ -24,6 +24,10 @@
       "valueString": ""
     },
     {
+      "name": "mhero:countrycode",
+      "valueString": ""
+    },
+    {
       "name": "elasticsearch:base",
       "valueString": "http://localhost:9200"
     },
