--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -23,6 +23,7 @@
     "is-empty": "^1.2.0",
     "jest-cucumber": "^3.0.1",
     "jwt-decode": "^3.1.2",
+    "jsonwebtoken": "^8.5.1",
     "keycloak-connect": "^15.0.2",
     "lodash": ">=4.17.21",
     "marked": "^2.0.7",
