--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -17,6 +17,7 @@
     "dompurify": "^2.2.9",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
+    "express-fileupload": "^1.2.1",
     "fhir2es": "^3.0.13",
     "fhirpath": "^2.9.0",
     "http-proxy-middleware": "^1.3.1",
@@ -44,7 +45,8 @@
     "uuid": "^8.3.2",
     "webidl-conversions": "^6.1.0",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.5"
+    "winston-daily-rotate-file": "^4.5.5",
+    "xlsx": "^0.17.2"
   },
   "devDependencies": {
     "jest": "^26.6.3"
