--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -13,18 +13,19 @@
     "axios": "^0.21.1",
     "connect-redis": "^4.0.4",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dompurify": "^2.2.9",
     "express": "~4.16.1",
-    "express-session": "^1.17.2",
     "express-fileupload": "^1.2.1",
+    "express-session": "^1.17.2",
     "fhir2es": "^3.0.13",
     "fhirpath": "^2.9.0",
     "http-proxy-middleware": "^1.3.1",
     "is-empty": "^1.2.0",
     "jest-cucumber": "^3.0.1",
-    "jwt-decode": "^3.1.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "keycloak-connect": "^15.0.2",
     "lodash": ">=4.17.21",
     "marked": "^2.0.7",
