--- a/ihris-frontend/package.json
+++ b/ihris-frontend/package.json
@@ -15,6 +15,8 @@
     "ethiopic-calendar": "^2.0.0",
     "fetch-defaults": "^1.0.0",
     "fhirpath": "^2.2.2",
+    "highcharts": "^9.3.2",
+    "highcharts-vue": "^1.4.0",
     "idle-vue": "^2.0.5",
     "keycloak-js": "^15.0.2",
     "vue": "^2.6.11",
