--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -14,6 +14,7 @@
     "connect-redis": "^4.0.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "debug": "~2.6.9",
     "dompurify": "^2.2.9",
     "express": "~4.16.1",
