--- a/resources/Parameters-ihris-config.signed.json
+++ b/resources/Parameters-ihris-config.signed.json
@@ -284,7 +284,7 @@
         },
         {
           "name": "site:nav:menu:reports:menu:staff:text",
-          "valueString": "Staff Report"
+          "valueString": "Health Worker Report"
         },
         {
           "name": "site:nav:menu:reports:menu:staff:url",
