--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -51,6 +51,7 @@
     "xlsx": "^0.17.2"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.15"
   }
 }
