--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -38,6 +38,7 @@
     "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport-totp": "0.0.2",
     "redis": ">=3.1.1",
     "require-from-string": "^2.0.2",
     "supertest": "^4.0.2",
