--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -34,6 +34,7 @@
     "nanoid": "^3.1.23",
     "nconf": "^0.10.0",
     "object-hash": "^2.2.0",
+    "openhim-mediator-utils": "^0.2.4",
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
