--- a/docker-compose.elastic.yml
+++ b/docker-compose.elastic.yml
@@ -4,12 +4,12 @@ services:
 
   es:
     container_name: es
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
     environment:
       node.name: es01
       discovery.type: single-node
       bootstrap.memory_lock: "true"
-      ES_JAVA_OPTS: -Xms512m -Xmx512m
+      ES_JAVA_OPTS: -Xms2048m -Xmx2048m
     ulimits:
       memlock:
         soft: -1
@@ -21,13 +21,13 @@ services:
 
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.9.2
+    image: docker.elastic.co/kibana/kibana:7.14.0
     container_name: kibana
     ports:
       - 5601:5601
     environment:
-      ELASTICSEARCH_URL: http://es:9200
-      ELASTICSEARCH_HOSTS: http://es:9200
+      ELASTICSEARCH_URL: http://localhost:9200
+      ELASTICSEARCH_HOSTS: http://localhost:9200
 
 
 volumes:
