edited Docker script

--- a/ihris-backend/Dockerfile.ihris.config
+++ b/ihris-backend/Dockerfile.ihris.config
@@ -1,8 +1,8 @@
 FROM node:erbium-slim
 
-ARG branch=master
+ARG branch=dev
 RUN apt-get -qq update && apt-get install -y -qq git
-RUN git clone --branch ${branch} https://github.com/iHRIS/iHRIS /src/
+RUN git clone --branch ${branch} https://github.com/jabahum/iHRIS /src/
 
 # generate fsh files
 WORKDIR /src/ig
