--- a/ihris-backend/Dockerfile
+++ b/ihris-backend/Dockerfile
@@ -25,23 +25,23 @@ RUN cp /src/ihris-backend/config/baseConfig.json.example /src/ihris-backend/conf
 ARG NODE_ENV=production
 ENV NODE_ENV=$NODE_ENV
 
-ARG IHRIS_EMNUTT__BASE=http://localhost:3002/emNutt/fhir
-ENV IHRIS_EMNUTT__BASE=$IHRIS_EMNUTT__BASE
+ARG IHRIS_EMNUTT_BASE=http://localhost:3002/emNutt/fhir
+ENV IHRIS_EMNUTT_BASE=$IHRIS_EMNUTT_BASE
 
-ARG IHRIS_FHIR__BASE=http://localhost:8080/hapi/fhir
-ENV IHRIS_FHIR__BASE=$IHRIS_FHIR__BASE
+ARG IHRIS_FHIR_BASE=http://wrkfhir:8080/fhir
+ENV IHRIS_FHIR_BASE=$IHRIS_FHIR_BASE
 
-ARG IHRIS_FHIR__USERNAME=hapi
-ENV IHRIS_FHIR__USERNAME=$IHRIS_FHIR__USERNAME
+ARG IHRIS_FHIR_USERNAME=hapi
+ENV IHRIS_FHIR_USERNAME=$IHRIS_FHIR_USERNAME
 
-ARG IHRIS_FHIR__PASSWORD=hapi
-ENV IHRIS_FHIR__PASSWORD=$IHRIS_FHIR__PASSWORD
+ARG IHRIS_FHIR_PASSWORD=b123afvaeuobciwy
+ENV IHRIS_FHIR_PASSWORD=$IHRIS_FHIR_PASSWORD
 
-ARG IHRIS_ELASTICSEARCH__BASE=http://localhost:9200
-ENV IHRIS_ELASTICSEARCH__BASE=$IHRIS_ELASTICSEARCH__BASE
+ARG IHRIS_ELASTICSEARCH_BASE=http://wrkes:9200
+ENV IHRIS_ELASTICSEARCH_BASE=$IHRIS_ELASTICSEARCH_BASE
 
-ARG IHRIS_KIBANA__BASE=http://localhost:5601
-ENV IHRIS_KIBANA__BASE=$IHRIS_KIBANA__BASE
+ARG IHRIS_KIBANA_BASE=http://wrkkibana:5601
+ENV IHRIS_KIBANA_BASE=$IHRIS_KIBANA_BASE
 
 EXPOSE 3000
 CMD ["npm", "run", "start"]
