added download csv file

--- a/ihris-backend/config/mediator.json.example
+++ b/ihris-backend/config/mediator.json.example
@@ -83,7 +83,7 @@
     "endpoints": [
         {
             "name": "Activate  National Health Worker Registry",
-            "host": "http://wrkihris:3000",
+            "host": "http://wrkihris",
             "path": "/fhir/mediator/Practitioner",
             "port": 3000,
             "primary": true,
