--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -33,6 +33,8 @@
     "morgan": "~1.9.1",
     "nanoid": "^3.1.23",
     "nconf": "^0.10.0",
+    "nodemailer": "^6.7.3",
+    "nodemailer-express-handlebars": "^5.0.0",
     "object-hash": "^2.2.0",
     "openhim-mediator-utils": "^0.2.4",
     "passport": "^0.4.1",
