updated docker image

--- a/ihris-backend/Dockerfile
+++ b/ihris-backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:14-buster
 
 ARG branch=dev
-RUN apt-get -qq clean all && apt -qq update && apt -qq upgrade -y && apt install -y -qq git
+RUN apt-get -qq clean all && apt-get -qq update && apt-get -qq upgrade -y && apt-get install -y -qq git
 RUN git clone --branch ${branch} https://github.com/jabahum/iHRIS /src/
 
 
