--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "NODE_ENV=production node ./bin/www",
-    "dev": "NODE_ENV=development node ./bin/www",
+    "dev": "NODE_ENV=development nodemon ./bin/www",
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
@@ -56,6 +56,7 @@
     "xlsx": "^0.17.2"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.16"
   }
 }
