--- a/ihris-backend/config/baseConfig.json.example
+++ b/ihris-backend/config/baseConfig.json.example
@@ -109,7 +109,7 @@
     },
     {
       "name": "mediator:api:password",
-      "valueString": "password"
+      "valueString": "Levers7-Unfixable-Unclasp"
     },
     {
       "name": "mediator:api:trustSelfSigned",
