--- a/ihris-backend/config/mediator.json.example
+++ b/ihris-backend/config/mediator.json.example
@@ -66,7 +66,7 @@
     "endpoints": [
          {
             "name": "Activate  National Health Worker Registry",
-            "host": "https://100.66.44.100",
+            "host": "http://100.66.44.100",
             "path": "/fhir/mediator/Practitioner",
             "port": 9000,
             "primary": true,
